--- a/src/components/NavBar/Menu/Menu.css
+++ b/src/components/NavBar/Menu/Menu.css
@@ -15,7 +15,7 @@
 
 .menu-item {
   list-style: none;
-  padding: 0 10px;
+  padding: 0 40px;
   position: relative;
 }
 
@@ -24,4 +24,8 @@
   font-size: 1.3rem;
   font-weight: 600;
   color: rgb(27, 26, 26);
+}
+
+.menu-item .menu-item-link.active {
+  font-size: 1.5rem;
 }
