--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -1,7 +1,8 @@
-.input {
+.product-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 5px;
+  height: 100%;
+  padding: 10px 20px;
 }
