--- a/src/components/NavBar/Menu/Menu.css
+++ b/src/components/NavBar/Menu/Menu.css
@@ -11,21 +11,42 @@
   align-items: center;
   padding: 0;
   margin: 0;
+  gap: 20px;
 }
 
 .menu-item {
   list-style: none;
-  padding: 0 40px;
+  padding: 0 20px;
   position: relative;
 }
 
 .menu-item .menu-item-link {
+  display: block;
   text-decoration: none;
   font-size: 1.3rem;
   font-weight: 600;
-  color: rgb(27, 26, 26);
+  color: #13327f;
+  transition: transform 0.3s ease-in-out;
 }
 
+.menu-item .menu-item-link:hover,
 .menu-item .menu-item-link.active {
-  font-size: 1.5rem;
+  transform: scale(1.15);
+}
+
+.menu-item .menu-item-link::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 10px;
+  right: 10px;
+  height: 3px;
+  background-color: #dc2226;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-out;
+  transform-origin: center;
+}
+
+.menu-item .menu-item-link.active::after {
+  transform: scaleX(1);
 }
