--- a/src/components/NavBar/Menu/Menu.css
+++ b/src/components/NavBar/Menu/Menu.css
@@ -54,25 +54,40 @@
 .submenu {
   display: none;
   position: absolute;
-  list-style: none;
-  padding: 0;
-  background-color: #f9f9f9;
+
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  white-space: nowrap;
+
+  left: 50%;
+  transform: translateX(-50%);
+
+  top: 100%;
+  margin-top: 15px;
+
+  background-color: #f0f0f0;
+
+  padding: 10px 20px;
+  border-radius: 50px;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
   z-index: 10;
-  text-align: center;
-  top: calc(100% + 25px);
-  left: 0;
-  margin-top: 0;
 }
 
-/* .menu-item.products-dropdown {
-  padding-bottom: 10px;
-} */
+.submenu::before {
+  content: "";
+  position: absolute;
+  top: -20px;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  background-color: transparent;
+}
 
 .products-dropdown:hover .submenu {
-  display: block;
-  margin-top: -15px;
-  padding-top: 15px;
-  background-color: #f0f0f0;
+  display: flex;
 }
 
 .submenu-item {
@@ -82,12 +97,17 @@
 }
 
 .submenu-item-link {
-  padding: 12px 16px;
   display: block;
   text-decoration: none;
-  color: #333;
+  color: #193d99;
+
+  font-weight: 500;
+  padding: 5px 10px;
+  border-radius: 20px;
+  transition: background-color 0.2s, color 0.2s;
 }
 
 .submenu-item-link:hover {
-  background-color: #ddd;
+  background-color: #dc2226;
+  color: white;
 }
